--- a/uca-2015/EvalCourse/Guerras/Cien/Cien_interaction_LineChart.html
+++ b/uca-2015/EvalCourse/Guerras/Cien/Cien_interaction_LineChart.html
@@ -17,7 +17,7 @@
 
         // Create the data table.
         var data = google.visualization.arrayToDataTable([
-['week', 'anonfirstname1 anonlastname1', 'anonfirstname2 anonlastname2', 'anonfirstname3 anonlastname3'],
+['week', 'Anonymous1 User1', 'Anonymous2 User2', 'Anonymous3 User3'],
 [38,  1170, 0, 0],
 [39, 0,  1998, 0],
 [40, 0, 0,  162],
