--- a/uca-2015/EvalCourse/Guerras/Cien/Cien_participation_PieChart.html
+++ b/uca-2015/EvalCourse/Guerras/Cien/Cien_participation_PieChart.html
@@ -18,9 +18,9 @@
         // Create the data table.
         var data = google.visualization.arrayToDataTable([
 ['id', 'Editions'],
-['anonfirstname1 anonlastname1',  8],
-['anonfirstname2 anonlastname2',  6],
-['anonfirstname3 anonlastname3',  6]
+['Anonymous1 User1',  8],
+['Anonymous2 User2',  6],
+['Anonymous3 User3',  6]
 ]); 
 
         // Set chart options
