--- a/uca-2015/EvalCourse/Guerras/Invencible/Invencible_participation_PieChart.html
+++ b/uca-2015/EvalCourse/Guerras/Invencible/Invencible_participation_PieChart.html
@@ -18,9 +18,9 @@
         // Create the data table.
         var data = google.visualization.arrayToDataTable([
 ['id', 'Editions'],
-['anonfirstname1 anonlastname1',  5],
-['anonfirstname2 anonlastname2',  1],
-['anonfirstname3 anonlastname3',  1]
+['Anonymous1 User1',  5],
+['Anonymous2 User2',  1],
+['Anonymous3 User3',  1]
 ]); 
 
         // Set chart options
