--- a/uca-2015/EvalCourse/Guerras/Invencible/Invencible_interaction_LineChart.html
+++ b/uca-2015/EvalCourse/Guerras/Invencible/Invencible_interaction_LineChart.html
@@ -17,7 +17,7 @@
 
         // Create the data table.
         var data = google.visualization.arrayToDataTable([
-['week', 'anonfirstname1 anonlastname1', 'anonfirstname2 anonlastname2', 'anonfirstname3 anonlastname3'],
+['week', 'Anonymous1 User1', 'Anonymous2 User2', 'Anonymous3 User3'],
 [38, 0, 0, 0],
 [39,  2180, 0, 0],
 [40, 0, 0, 0],
